--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="usePopcorn - Track and manage your movie watchlist" />
-    <title>usePopcorn - Movie Tracker</title>
+    <title>🍿MovieMood - Movie Tracker</title>
   </head>
   <body>
     <div id="root"></div>
