--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="usePopcorn - Track and manage your movie watchlist" />
-    <title>🍿MovieMood - Movie Tracker</title>
+    <title>🍿CinemaCollector  - Movie Tracker</title>
   </head>
   <body>
     <div id="root"></div>
