--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="usePopcorn - Track and manage your movie watchlist" />
+    <meta name="description" content="CinemaCollector - Track and manage your movie watchlist" />
     <title>🍿CinemaCollector  - Movie Tracker</title>
   </head>
   <body>
